# ng-infinite-loop

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
cmake/: version.rc.in
src/: EventListener.cpp  EventListener.h  Main.cpp
